Minor wording changes

--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <p>
-            Future Business Leaders of America–Phi Beta Lambda is the largest student business organization in the nation. The UC Berkeley chapter of FBLA–PBL aims to develop well-rounded business leaders who care about making an impact in the world. To that end goal, we serve these three stages of a member’s personal and professional development:
+            Future Business Leaders of America–Phi Beta Lambda is the largest student business organization in the nation. The UC Berkeley chapter of FBLA–PBL aims to develop well-rounded business leaders who care about making an impact in the world. To this end goal, we serve these three stages of a member’s personal and professional development:
           </p>
           <div class="row text-center">
             <div class="col-4">
@@ -153,7 +153,7 @@
       <h1 class="display-4 text-center">Club Structure</h1>
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <p>Five project teams, known as committees, focus on different fields and intersections of business and pursue engaging and challenging curriculums to foster well-rounded members. In addition, PBL offers its consulting services to a wide range of clients from Fortune 500 firms to budding start-ups through its Upper Division client teams. Apart from projects completed within committees, members also experience the Internal Curriculum, an engaging series of professional development workshops dedicated to preparing members for a successful career; and participate in mentorship programs aimed at providing specific guidance for members' interests</p>
+          <p>Five project teams, known as committees, focus on different fields and intersections of business and pursue engaging and challenging curriculums to foster well-rounded members. In addition, PBL offers its consulting services to a wide range of clients from budding start-ups to Fortune 500 firms through its Upper Division client teams. Apart from projects completed within committees, members also experience the Internal Curriculum, an engaging series of professional development workshops dedicated to preparing members for a successful career, and participate in mentorship programs aimed at providing specific guidance for members' interests. </p>
         </div>
       </div>
       <div class="row text-center">
@@ -207,7 +207,7 @@
             <img src="img/committee-icons/ud.png" class="pillar-img invert-img" alt="Upper Division">
             <h5>Upper Division</h5>
             <p class="text-justify text-md-center">
-              The Upper Division Committee puts the technical skills garnered from the industry-specific committees into practice, taking on a diverse set of consulting projects. With an emphasis on impactful, hands-on engagement, the Upper Division project teams have worked with countless clients ranging from Fortune 500 firms to budding start-ups.
+              The Upper Division Committee puts the technical skills garnered from the industry-specific committees into practice, taking on a diverse set of consulting projects. With an emphasis on impactful, hands-on engagement, the Upper Division project teams have worked with countless clients ranging from budding start-ups to Fortune 500 firms.
             </p>
           </a>
         </div>
