--- a/apply.html
+++ b/apply.html
@@ -105,7 +105,7 @@
               <div class="timeline-description order-sm-3 pb-1">
                 <h1>Infosession 2</h1>
                 <h5 class="text-muted">@ 8-10pm Barrows 126</h5>
-                <p>Mirroring the Infosession #1, this event is another opportunity to come meet our members and learn about the amazing opportunities and community PBL has to offer! While we welcome interested applicants to mingle with our officers in any capacity, you are not required to attend both infosessions.</p>
+                <p>Mirroring Infosession #1, this event is another opportunity to come meet our members and learn about the amazing opportunities and community PBL has to offer! While we welcome interested applicants to mingle with our officers in any capacity, you are not required to attend both infosessions.</p>
               </div>
             </li>
             <li class="timeline-event">
