--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <p>
-            Berkeley PBL brings together a diverse group of ambitious, inventive students, dedicated to helping one another succeed in all aspects of college life. Our members achieve professional accomplishments, whether in launching their own start-up or landing their dream internship, while finding their place in a welcoming community of friends, mentors, and alumni. From collaborating on impactful consulting projects to travelling abroad together, PBL members actively pursue professional and personal passions. Come out to our Spring 2020 recruitment events to meet the officers that distinguish the PBL community!
+            Berkeley PBL brings together a diverse group of ambitious, inventive students, dedicated to helping one another thrive in all aspects of college life. Our members achieve professional success, whether in launching their own start-up or landing their dream internship, while finding their place in a welcoming community of friends, mentors, and alumni. From collaborating on impactful consulting projects to travelling abroad together, PBL members actively pursue professional and personal passions. Come out to our Spring 2020 recruitment events to meet the officers that distinguish the PBL community!
           </p>
           <a class="nav-link" href="apply.html#timeline">
             <button type="button" class="btn btn-dark btn-lg m-1">Events</button>
