--- a/upper-division.html
+++ b/upper-division.html
@@ -73,7 +73,7 @@
         <div class="col-lg-8 mx-auto">
           <section class="py-4">
             <p>
-              The Upper Division committee spearhead PBL's consulting services. Working with a wide array of clients from Fortune 500 firms to budding start-ups, Upper Division teams allow members to take the knowledge and experience from their industry-specific committee curriculums and apply them to real world projects.
+              The Upper Division committee spearhead PBL's consulting services. Working with a wide array of clients from budding start-ups to Fortune 500 firms, Upper Division teams allow members to take the knowledge and experience from their industry-specific committee curriculums and apply them to real world projects.
             </p>
           </section>
         </div>
