Add remaining portraits and linkedins

--- a/404.html
+++ b/404.html
@@ -92,7 +92,7 @@
           Website created and designed by
           <a class="text-light" href="https://www.linkedin.com/in/darrenkim21/">Darren Kim</a>,
           <a class="text-light" href="https://www.linkedin.com/in/dennis-pham-342638170/">Dennis Pham</a>,
-          <a class="text-light" href="https://www.linkedin.com/in/darrenkim21/">Grace Chi</a>, and
+          <a class="text-light" href="https://www.linkedin.com/in/grace-chi-70b78418b/">Grace Chi</a>, and
           <a class="text-light" href="https://www.linkedin.com/in/jeremymui/">Jeremy Mui</a>
         </div>
       </div>
