--- a/committees.html
+++ b/committees.html
@@ -90,7 +90,7 @@
             <div class="row">
               <div class="col-11 col-sm-7 col-md-6 mx-auto">
                 <figure class="bio-card text-center border border-dark">
-                  <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
+                  <img class="w-100 bio-rect-img" src="img/portraits/bradly.jpg" alt="Bradly Wei portrait">
                   <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
@@ -107,7 +107,7 @@
               </div>
               <div class="col-11 col-sm-7 col-md-6 mx-auto">
                 <figure class="bio-card text-center border border-dark">
-                  <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
+                  <img class="w-100 bio-rect-img" src="img/portraits/erika.jpg" alt="Erika Yang portrait">
                   <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
@@ -133,7 +133,7 @@
             <div class="row">
               <div class="col-11 col-sm-7 col-md-6 mx-auto">
                 <figure class="bio-card text-center border border-dark">
-                  <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
+                  <img class="w-100 bio-rect-img" src="img/portraits/jackie.jpg" alt="Jackie Cai portrait">
                   <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
@@ -150,7 +150,7 @@
               </div>
               <div class="col-11 col-sm-7 col-md-6 mx-auto">
                 <figure class="bio-card text-center border border-dark">
-                  <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
+                  <img class="w-100 bio-rect-img" src="img/portraits/kaci.jpg" alt="Kaci Gu portrait">
                   <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
@@ -176,7 +176,7 @@
             <div class="row">
               <div class="col-11 col-sm-7 col-md-6 mx-auto">
                 <figure class="bio-card text-center border border-dark">
-                  <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
+                  <img class="w-100 bio-rect-img" src="img/portraits/abby.jpg" alt="Abby Tan portrait">
                   <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
@@ -193,7 +193,7 @@
               </div>
               <div class="col-11 col-sm-7 col-md-6 mx-auto">
                 <figure class="bio-card text-center border border-dark">
-                  <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
+                  <img class="w-100 bio-rect-img" src="img/portraits/justin.jpg" alt="Justin Quan portrait">
                   <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
@@ -219,7 +219,7 @@
             <div class="row">
               <div class="col-11 col-sm-7 col-md-6 mx-auto">
                 <figure class="bio-card text-center border border-dark">
-                  <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
+                  <img class="w-100 bio-rect-img" src="img/portraits/angela.jpg" alt="Angela Jiang portrait">
                   <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
@@ -236,7 +236,7 @@
               </div>
               <div class="col-11 col-sm-7 col-md-6 mx-auto">
                 <figure class="bio-card text-center border border-dark">
-                  <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
+                  <img class="w-100 bio-rect-img" src="img/portraits/emily.jpg" alt="Emily Zhu portrait">
                   <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
@@ -262,7 +262,7 @@
             <div class="row">
               <div class="col-11 col-sm-7 col-md-6 mx-auto">
                 <figure class="bio-card text-center border border-dark">
-                  <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
+                  <img class="w-100 bio-rect-img" src="img/portraits/dennis.jpg" alt="Dennis Pham portrait">
                   <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
@@ -279,7 +279,7 @@
               </div>
               <div class="col-11 col-sm-7 col-md-6 mx-auto">
                 <figure class="bio-card text-center border border-dark">
-                  <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
+                  <img class="w-100 bio-rect-img" src="img/portraits/grace.jpg" alt="Grace Chi portrait">
                   <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
@@ -288,7 +288,7 @@
                       </div>
                       <div class="bio-hidden px-1">
                         <p>Hello! My name is Grace, and I am a second year looking to major in Economics. My background in art provides me with a creative eye that translates well to my passion for taking business strategies to the next level with visual media. Beyond academics, you can find me exploring the streets of Berkeley or sketching in some corner at Peet’s.</p>
-                        <a class="text-light h4" href=""><i class="fab fa-linkedin"></i></a>
+                        <a class="text-light h4" href="https://www.linkedin.com/in/grace-chi-70b78418b/"><i class="fab fa-linkedin"></i></a>
                       </div>
                     </div>
                   </figcaption>
@@ -315,7 +315,7 @@
           Website created and designed by
           <a class="text-light" href="https://www.linkedin.com/in/darrenkim21/">Darren Kim</a>,
           <a class="text-light" href="https://www.linkedin.com/in/dennis-pham-342638170/">Dennis Pham</a>,
-          <a class="text-light" href="https://www.linkedin.com/in/darrenkim21/">Grace Chi</a>, and
+          <a class="text-light" href="https://www.linkedin.com/in/grace-chi-70b78418b/">Grace Chi</a>, and
           <a class="text-light" href="https://www.linkedin.com/in/jeremymui/">Jeremy Mui</a>
         </div>
       </div>
