--- a/upper-division.html
+++ b/upper-division.html
@@ -86,7 +86,7 @@
             <div class="row">
               <div class="col-11 col-sm-7 col-md-6 mx-auto">
                 <figure class="bio-card text-center border border-dark">
-                  <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
+                  <img class="w-100 bio-rect-img" src="img/portraits/anthony.jpg" alt="Anthony Chen portrait">
                   <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
@@ -105,7 +105,7 @@
               </div>
               <div class="col-11 col-sm-7 col-md-6 mx-auto">
                 <figure class="bio-card text-center border border-dark">
-                  <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
+                  <img class="w-100 bio-rect-img" src="img/portraits/carrington.jpg" alt="Carrington Park portrait">
                   <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
@@ -129,7 +129,7 @@
             <div class="row">
               <div class="col-11 col-sm-7 col-md-6 mx-auto">
                 <figure class="bio-card text-center border border-dark">
-                  <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
+                  <img class="w-100 bio-rect-img" src="img/portraits/henry.jpg" alt="Henry Cheong portrait">
                   <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
@@ -148,7 +148,7 @@
               </div>
               <div class="col-11 col-sm-7 col-md-6 mx-auto">
                 <figure class="bio-card text-center border border-dark">
-                  <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
+                  <img class="w-100 bio-rect-img" src="img/portraits/kai.jpg" alt="Kai Chen portrait">
                   <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
@@ -170,7 +170,7 @@
             <div class="row">
               <div class="col-11 col-sm-7 col-md-6 mx-auto">
                 <figure class="bio-card text-center border border-dark">
-                  <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
+                  <img class="w-100 bio-rect-img" src="img/portraits/conor.jpg" alt="Conor Richard portrait">
                   <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
@@ -189,7 +189,7 @@
               </div>
               <div class="col-11 col-sm-7 col-md-6 mx-auto">
                 <figure class="bio-card text-center border border-dark">
-                  <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
+                  <img class="w-100 bio-rect-img" src="img/portraits/roger.jpg" alt="Roger Zhang portrait">
                   <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
@@ -227,7 +227,7 @@
           Website created and designed by
           <a class="text-light" href="https://www.linkedin.com/in/darrenkim21/">Darren Kim</a>,
           <a class="text-light" href="https://www.linkedin.com/in/dennis-pham-342638170/">Dennis Pham</a>,
-          <a class="text-light" href="https://www.linkedin.com/in/darrenkim21/">Grace Chi</a>, and
+          <a class="text-light" href="https://www.linkedin.com/in/grace-chi-70b78418b/">Grace Chi</a>, and
           <a class="text-light" href="https://www.linkedin.com/in/jeremymui/">Jeremy Mui</a>
         </div>
       </div>
