--- a/executive.html
+++ b/executive.html
@@ -81,7 +81,7 @@
       <div class="row">
         <div class="col-lg-4 col-11 col-sm-7 col-md-6 mx-auto">
           <figure class="bio-card text-center border border-dark">
-            <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
+            <img class="w-100 bio-rect-img" src="img/portraits/nick.jpg" alt="Nicholas Paul portrait">
             <figcaption class="pb-3 mx-2 caption text-light">
               <div class="">
                 <div class="bio-visible rounded-top py-3 px-1">
@@ -100,7 +100,7 @@
         </div>
         <div class="col-lg-4 col-11 col-sm-7 col-md-6 mx-auto">
           <figure class="bio-card text-center border border-dark">
-            <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
+            <img class="w-100 bio-rect-img" src="img/portraits/darren.jpg" alt="Darren Kim portrait">
             <figcaption class="pb-3 mx-2 caption text-light">
               <div class="">
                 <div class="bio-visible rounded-top py-3 px-1">
@@ -119,7 +119,7 @@
         </div>
         <div class="col-lg-4 col-11 col-sm-7 col-md-6 mx-auto">
           <figure class="bio-card text-center border border-dark">
-            <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
+            <img class="w-100 bio-rect-img" src="img/portraits/claire.jpg" alt="Claire Yoon portrait">
             <figcaption class="pb-3 mx-2 caption text-light">
               <div class="">
                 <div class="bio-visible rounded-top py-3 px-1">
@@ -138,7 +138,7 @@
         </div>
         <div class="col-lg-4 col-11 col-sm-7 col-md-6 mx-auto">
           <figure class="bio-card text-center border border-dark">
-            <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
+            <img class="w-100 bio-rect-img" src="img/portraits/michelle.jpg" alt="Michelle Lin portrait">
             <figcaption class="pb-3 mx-2 caption text-light">
               <div class="">
                 <div class="bio-visible rounded-top py-3 px-1">
@@ -157,7 +157,7 @@
         </div>
         <div class="col-lg-4 col-11 col-sm-7 col-md-6 mx-auto">
           <figure class="bio-card text-center border border-dark">
-            <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
+            <img class="w-100 bio-rect-img" src="img/portraits/alice.jpg" alt="Alice Chen portrait">
             <figcaption class="pb-3 mx-2 caption text-light">
               <div class="">
                 <div class="bio-visible rounded-top py-3 px-1">
@@ -176,7 +176,7 @@
         </div>
         <div class="col-lg-4 col-11 col-sm-7 col-md-6 mx-auto">
           <figure class="bio-card text-center border border-dark">
-            <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
+            <img class="w-100 bio-rect-img" src="img/portraits/jeremy.jpg" alt="Jeremy Mui portrait">
             <figcaption class="pb-3 mx-2 caption text-light">
               <div class="">
                 <div class="bio-visible rounded-top py-3 px-1">
@@ -211,7 +211,7 @@
           Website created and designed by
           <a class="text-light" href="https://www.linkedin.com/in/darrenkim21/">Darren Kim</a>,
           <a class="text-light" href="https://www.linkedin.com/in/dennis-pham-342638170/">Dennis Pham</a>,
-          <a class="text-light" href="https://www.linkedin.com/in/darrenkim21/">Grace Chi</a>, and
+          <a class="text-light" href="https://www.linkedin.com/in/grace-chi-70b78418b/">Grace Chi</a>, and
           <a class="text-light" href="https://www.linkedin.com/in/jeremymui/">Jeremy Mui</a>
         </div>
       </div>
