--- a/internal-networking.html
+++ b/internal-networking.html
@@ -81,7 +81,7 @@
       <div class="row">
         <div class="col-lg-3 col-11 col-sm-7 col-md-6 mx-auto pb-3">
           <figure class="bio-card text-center border border-dark">
-            <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
+            <img class="w-100 bio-rect-img" src="img/portraits/austin.jpg" alt="Austin Kim portrait">
             <figcaption class="pb-3 mx-2 caption text-light">
               <div class="">
                 <div class="bio-visible rounded-top py-3 px-1">
@@ -98,7 +98,7 @@
         </div>
         <div class="col-lg-3 col-11 col-sm-7 col-md-6 mx-auto">
           <figure class="bio-card text-center border border-dark">
-            <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
+            <img class="w-100 bio-rect-img" src="img/portraits/brenton.jpg" alt="Brenton Law portrait">
             <figcaption class="pb-3 mx-2 caption text-light">
               <div class="">
                 <div class="bio-visible rounded-top py-3 px-1">
@@ -115,7 +115,7 @@
         </div>
         <div class="col-lg-3 col-11 col-sm-7 col-md-6 mx-auto">
           <figure class="bio-card text-center border border-dark">
-            <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
+            <img class="w-100 bio-rect-img" src="img/portraits/kate.jpg" alt="Kate Ngo portrait">
             <figcaption class="pb-3 mx-2 caption text-light">
               <div class="">
                 <div class="bio-visible rounded-top py-3 px-1">
@@ -132,7 +132,7 @@
         </div>
         <div class="col-lg-3 col-11 col-sm-7 col-md-6 mx-auto">
           <figure class="bio-card text-center border border-dark">
-            <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
+            <img class="w-100 bio-rect-img" src="img/portraits/sydney.jpg" alt="Sydney Ty portrait">
             <figcaption class="pb-3 mx-2 caption text-light">
               <div class="">
                 <div class="bio-visible rounded-top py-3 px-1">
