--- a/executive.html
+++ b/executive.html
@@ -73,7 +73,7 @@
         <div class="col-lg-8 mx-auto">
           <section class="py-4">
             <p>
-              The Executive team manages the smooth day-to-day operations while planning the semester's large-scale events and activities. From co-hosting speaker panels to leading our premier professional development workshops, the Executive team embodies the PBL values and the hallmarks of personal and professional success.
+              The Executive team manages the smooth day-to-day operations of the organization while planning the semester's large-scale events and activities. From co-hosting speaker panels to leading our premier professional development workshops, the Executive team embodies the PBL values and the hallmarks of personal and professional success.
             </p>
           </section>
         </div>
