Add remaining bios

--- a/committees.html
+++ b/committees.html
@@ -227,7 +227,9 @@
                         <span class="h6 role">Technology Chair</span>
                       </div>
                       <div class="bio-hidden px-1">
-                        <p> Hello my name is Darren and I like making finger guns </p>
+                        <p>
+                          Hi! I’m Angela, a sophomore studying computer science and economics. Outside of PBL, I also teach  CS with CSM and do Chinese dance, and I love eating good food!
+                        </p>
                         <a class="text-light h4" href="https://www.linkedin.com/in/angelajjiang/"><i class="fab fa-linkedin"></i></a>
                       </div>
                     </div>
