--- a/executive.html
+++ b/executive.html
@@ -90,7 +90,7 @@
                 </div>
                 <div class="bio-hidden px-1">
                   <p>
-                    Hello my name is Darren and I like making finger guns
+                    Hi there! I'm Nick, a senior studying economics and Public Health. I've been in PBL since my freshman year, and am excited to serve as the club's president for my last semester here at Berkeley. The club has helped me so much to grow professionally, has gotten me to where I am today, and has helped me to make close friends that I'll treasure forever. In my free time, I love to travel to new places, eat good food, and play basketball.
                   </p>
                   <a class="text-light h4" href="https://www.linkedin.com/in/nicholas-paul/"><i class="fab fa-linkedin"></i></a>
                 </div>
@@ -109,7 +109,7 @@
                 </div>
                 <div class="bio-hidden px-1">
                   <p>
-                    Hello my name is Darren and I like making finger guns
+                    Hi! I'm Darren, a third year studying Business Administration with a career interest in human capital consulting. This will be my fourth semester in PBL. Outside of professional pursuits, I'm an avid photographer and love adventures of all shapes and sizes, having set foot in over 15 countries. I'm also a passionate volunteer educator, mentoring young students for the past 7 years. In my free time, I love playing guitar, hosting dinner parties, and searching for the next best tapas bar!
                   </p>
                   <a class="text-light h4" href="https://www.linkedin.com/in/darrenkim21/"><i class="fab fa-linkedin"></i></a>
                 </div>
@@ -128,7 +128,7 @@
                 </div>
                 <div class="bio-hidden px-1">
                   <p>
-                    Hello my name is Darren and I like making finger guns
+                    Hello! I’m Claire, a sophomore studying Cognitive Science and Data Science. PBL has not only developed my professional foundation but has also been my second home, where I've found my closest friends. Outside of the organization, I love exploring different cafes and restaurants, designing, taking photos, and cooking. This will be my fourth semester in PBL, and I’m excited to meet all the new members!
                   </p>
                   <a class="text-light h4" href="https://www.linkedin.com/in/claireyoon22/"><i class="fab fa-linkedin"></i></a>
                 </div>
@@ -147,7 +147,7 @@
                 </div>
                 <div class="bio-hidden px-1">
                   <p>
-                    Hello my name is Darren and I like making finger guns
+                    Hi! I’m Michelle, and this is my third semester in PBL. I’m a second year studying computer science. I’m interested in the intersection of tech and business whether that be tech consulting, marketing analytics, or data science. In my free time, I play basketball to make up for the excessive amount of ice cream I eat! Come share your best ice cream recommendations or ask me if you’re looking for new ones to try!
                   </p>
                   <a class="text-light h4" href="https://www.linkedin.com/in/michellealin/"><i class="fab fa-linkedin"></i></a>
                 </div>
@@ -166,7 +166,7 @@
                 </div>
                 <div class="bio-hidden px-1">
                   <p>
-                    Hello my name is Darren and I like making finger guns
+                    Hi! I’m a sophomore, studying economics and data science. I joined PBL as a Marketing committee member my freshman fall semester, and now, three semesters later, I am excited to serve as Vice President of Projects! PBL has been an amazing organization that helped me discover my passion for business and also allowed me to meet driven, passionate people. Outside of academics, I love binge watching HBO, singing (badly!), and eating yummy foods!
                   </p>
                   <a class="text-light h4" href="https://www.linkedin.com/in/alicechenaac/"><i class="fab fa-linkedin"></i></a>
                 </div>
@@ -185,7 +185,7 @@
                 </div>
                 <div class="bio-hidden px-1">
                   <p>
-                    Hello my name is Darren and I like making finger guns
+                    Hey! I'm Jeremy, a third year CS and Data Science major, and I'm excited to come back for my third semester in PBL. I'm interested in the intersection of technology, music, and business. In my free time, I like to watch Netflix, drink Thai tea, and listen to EDM, rap, and pop music. I also enjoy playing various songs by ear on the piano and improvising melodies!
                   </p>
                   <a class="text-light h4" href="https://www.linkedin.com/in/jeremymui/"><i class="fab fa-linkedin"></i></a>
                 </div>
