--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
   <link href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
 
-  <title>Berkeley PBL</title>
+  <title>Page Not Found | Berkeley PBL</title>
 </head>
 
 <body>
