--- a/apply.html
+++ b/apply.html
@@ -20,6 +20,10 @@
   <link href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
 
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap" rel="stylesheet">
+
+
   <title>Join Us | Berkeley PBL</title>
 </head>
 
