Remove extraneous quotation mark from Dennis's bio

--- a/committees.html
+++ b/committees.html
@@ -285,7 +285,7 @@
                         <span class="h6 role">Visual Media Chair</span>
                       </div>
                       <div class="bio-hidden px-1">
-                        <p>Hey everyone! I'm Dennis and I am a junior majoring in Business Administration with a focus on entertainment and creative marketing. Outside of school, I do a lot of cinematography work ranging from weddings, music videos, to commercials, in addition to doing freelance work for a variety of companies. I'm super excited for this upcoming semester and am looking forward to meeting you all!"</p>
+                        <p>Hey everyone! I'm Dennis and I am a junior majoring in Business Administration with a focus on entertainment and creative marketing. Outside of school, I do a lot of cinematography work ranging from weddings, music videos, to commercials, in addition to doing freelance work for a variety of companies. I'm super excited for this upcoming semester and am looking forward to meeting you all!</p>
                         <a class="text-light h4" href="https://www.linkedin.com/in/dennis-pham-342638170/"><i class="fab fa-linkedin"></i></a>
                       </div>
                     </div>
