Add Facebook event links

--- a/apply.html
+++ b/apply.html
@@ -105,7 +105,10 @@
               <div class="timeline-description order-sm-3 pb-1">
                 <h1>Infosession 1</h1>
                 <h5 class="text-muted">@ 8-10pm Barrows 166</h5>
-                <p>Come meet our members and learn about the amazing opportunities and community PBL has to offer! You'll have the chance to hear more about our industry-specific committees and project teams, our favorite PBL experiences, and the vast professional and personal resources available to our members.</p>
+                <p class="mb-1">Come meet our members and learn about the amazing opportunities and community PBL has to offer! You'll have the chance to hear more about our industry-specific committees and project teams, our favorite PBL experiences, and the vast professional and personal resources available to our members.</p>
+                <a class="footer-icon-link" href="https://www.facebook.com/events/836166433500177">
+                  <i class="far fa-calendar-plus mb-3"></i>
+                </a>
               </div>
             </li>
             <li class="timeline-event">
@@ -118,7 +121,10 @@
               <div class="timeline-description order-sm-3 pb-1">
                 <h1>Infosession 2</h1>
                 <h5 class="text-muted">@ 8-10pm Barrows 126</h5>
-                <p>Mirroring Infosession #1, this event is another opportunity to come meet our members and learn about the amazing opportunities and community PBL has to offer! While we welcome interested applicants to mingle with our officers in any capacity, you are not required to attend both infosessions.</p>
+                <p class="mb-1">Mirroring Infosession #1, this event is another opportunity to come meet our members and learn about the amazing opportunities and community PBL has to offer! While we welcome interested applicants to mingle with our officers in any capacity, you are not required to attend both infosessions.</p>
+                <a class="footer-icon-link" href="https://www.facebook.com/events/836166430166844">
+                  <i class="far fa-calendar-plus mb-3"></i>
+                </a>
               </div>
             </li>
             <li class="timeline-event">
@@ -131,7 +137,10 @@
               <div class="timeline-description order-sm-3 pb-1">
                 <h1>Social Mixer</h1>
                 <h5 class="text-muted">@ 7-9pm Stephens Lounge</h5>
-                <p>Head out to MLK's Stephens Lounge for the perfect opportunity to meet and get to know our members on a more personal level before submitting your application. Whether you have a burning question about a particular committee or just want to leave a lasting impression before interviews, our Social Mixer is the perfect chance to talk about your personal or professional passions and gauge if PBL is right for you!</p>
+                <p class="mb-1">Head out to MLK's Stephens Lounge for the perfect opportunity to meet and get to know our members on a more personal level before submitting your application. Whether you have a burning question about a particular committee or just want to leave a lasting impression before interviews, our Social Mixer is the perfect chance to talk about your personal or professional passions and gauge if PBL is right for you!</p>
+                <a class="footer-icon-link" href="https://www.facebook.com/events/836166436833510">
+                  <i class="far fa-calendar-plus mb-3"></i>
+                </a>
               </div>
             </li>
             <li class="timeline-event">
@@ -144,7 +153,7 @@
               <div class="timeline-description order-sm-3 pb-1">
                 <h1>Application Due</h1>
                 <h5 class="text-muted">@ 9pm</h5>
-                <p>Fill out your application below by 9 PM on Friday, January 31st. The application includes both personal information as well as questions to gauge interest, experiences, and personal fit. We also require additional documents such as your resume and optional supplementary material. For personal insights and tips or general questions, come talk to our officers tabling on Sproul or at any of our recruitment events!</p>
+                <p class="mb-1">Fill out your application below by 9 PM on Friday, January 31st. The application includes both personal information as well as questions to gauge interest, experiences, and personal fit. We also require additional documents such as your resume and optional supplementary material. For personal insights and tips or general questions, come talk to our officers tabling on Sproul or at any of our recruitment events!</p>
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSd5huzuPJO3MAthDAEJD9AW7S_j80XdtTkS-s1myF29UbDUvA/viewform">
                   <button type="button" class="btn btn-dark">Apply Here</button>
                 </a>
