Add images and recruitment video to homepage

--- a/index.html
+++ b/index.html
@@ -92,6 +92,13 @@
     <section class="container py-5 text-center">
       <h1 class="display-4">Who We Are</h1>
       <div class="row">
+        <div class="col-lg-6 col-md-9 col-12 mx-auto">
+          <div class="embed-responsive embed-responsive-16by9 mb-3">
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/TF92ue4T5r4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+      <div class="row">
         <div class="col-lg-8 mx-auto">
           <p>
             Future Business Leaders of America-Phi Beta Lambda is the largest student business organization in the nation. Emphasizing a holistic and comprehensive approach to mastering business principles and practices, Berkeley Phi Beta Lambda provides members with the technical and interpersonal foundation needed to thrive as a business leader in today's dynamic world.
@@ -106,6 +113,11 @@
     <section class="container py-5 text-center">
       <h1 class="display-4">What We Do</h1>
       <div class="row">
+        <div class="col-lg-5 col-md-9 col-12 mx-auto">
+          <img src="img/IMG_1211-2.jpg" class="w-100 mb-3">
+        </div>
+      </div>
+      <div class="row">
         <div class="col-lg-8 mx-auto">
           <p>
             Berkley PBL's unique structure of being both a general business organization and consulting group allows for a compendious business education. Members undergo an industry-specific curriculum, building a foundation of technical skills and business acumen before joining one of our strategy consulting teams. In addition, members partake in our semester-long Internal Curriculum, an engaging series of professional development workshops in resume building, behavioral and technical interviews, case analysis, and more.
@@ -119,6 +131,11 @@
     <hr>
     <section class="container py-5 text-center">
       <h1 class="display-4">Why PBL</h1>
+      <div class="row">
+        <div class="col-lg-5 col-md-9 col-12 mx-auto">
+          <img src="img/why-pbl.jpg" class="w-100 mb-3">
+        </div>
+      </div>
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <p>
