Make all paths absolute for 404 page

--- a/404.html
+++ b/404.html
@@ -31,7 +31,7 @@
   <header class="header index-background hero-header">
     <nav class="navbar navbar-expand-sm navbar-dark nav-transition fixed-top py-0" id="mainNav">
       <div class="container">
-        <a class="navbar-brand-trigger" href="index.html">
+        <a class="navbar-brand-trigger" href="/index.html">
           <img src="/img/logo.png" class="pbl-logo" alt="Berkeley PBL">
         </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,10 +40,10 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="/index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link" href="/about.html">About</a>
             </li>
             <li class="nav-item">
               <div class="dropdown">
@@ -51,23 +51,23 @@
                   Meet the Team
                 </a>
                 <div class="dropdown-menu">
-                  <a class="dropdown-item" href="committees.html#consulting">Consulting</a>
-                  <a class="dropdown-item" href="committees.html#finance">Finance</a>
-                  <a class="dropdown-item" href="committees.html#marketing">Marketing</a>
-                  <a class="dropdown-item" href="committees.html#technology">Technology</a>
-                  <a class="dropdown-item" href="committees.html#visual-media">Visual Media</a>
+                  <a class="dropdown-item" href="/committees.html#consulting">Consulting</a>
+                  <a class="dropdown-item" href="/committees.html#finance">Finance</a>
+                  <a class="dropdown-item" href="/committees.html#marketing">Marketing</a>
+                  <a class="dropdown-item" href="/committees.html#technology">Technology</a>
+                  <a class="dropdown-item" href="/committees.html#visual-media">Visual Media</a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="internal-networking.html">Internal Networking</a>
-                  <a class="dropdown-item" href="upper-division.html">Upper Division</a>
-                  <a class="dropdown-item" href="executive.html">Executive</a>
+                  <a class="dropdown-item" href="/internal-networking.html">Internal Networking</a>
+                  <a class="dropdown-item" href="/upper-division.html">Upper Division</a>
+                  <a class="dropdown-item" href="/executive.html">Executive</a>
                 </div>
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="careers.html">Careers</a>
+              <a class="nav-link" href="/careers.html">Careers</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="apply.html">Join Us</a>
+              <a class="nav-link" href="/apply.html">Join Us</a>
             </li>
           </ul>
         </div>
@@ -79,7 +79,7 @@
         <p class="lead p-1">
           Looks like you've followed a broken link or entered a URL that doesn't exist on our site.
         </p>
-        <a class="nav-link" href="index.html">
+        <a class="nav-link" href="/index.html">
           <button type="button" class="btn btn-light btn-lg m-1">Return Home</button>
         </a>
       </div>
