--- a/internal-networking.html
+++ b/internal-networking.html
@@ -238,9 +238,9 @@
         <div class="footer-text">© Berkeley PBL 2020</div>
         <div class="footer-text">
           Website created and designed by
-          <a class="text-light" href="">Darren Kim</a>,
+          <a class="text-light" href="https://www.linkedin.com/in/darrenkim21/">Darren Kim</a>,
           <a class="text-light" href="https://www.linkedin.com/in/dennis-pham-342638170/">Dennis Pham</a>,
-          <a class="text-light" href="">Grace Chi</a>, and
+          <a class="text-light" href="https://www.linkedin.com/in/grace-chi-70b78418b/">Grace Chi</a>, and
           <a class="text-light" href="https://www.linkedin.com/in/jeremymui/">Jeremy Mui</a>
         </div>
       </div>
